--- a/liverpool-news-site/package.json
+++ b/liverpool-news-site/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "cloudinary-react": "^1.7.0",
+    "material-ui-backdrop-component": "^1.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
