--- a/liverpool-news-site/package.json
+++ b/liverpool-news-site/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.17.2",
     "axios": "^0.24.0",
     "cloudinary-react": "^1.7.0",
     "material-ui-backdrop-component": "^1.0.7",
@@ -19,6 +20,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.6.0",
+    "react-table": "^7.7.0",
     "sweetalert2": "^11.2.1",
     "sweetalert2-react-content": "^4.2.0",
     "universal-cookie": "^4.0.4",
