--- a/liverpool-news-site/package.json
+++ b/liverpool-news-site/package.json
@@ -13,6 +13,7 @@
     "material-ui-backdrop-component": "^1.0.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-jwt": "^1.1.4",
